Fix horizontal scroll

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -100,7 +100,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  margin: 10px;
+  margin-bottom: 10px;
   text-align: right;
 }
 
